Enhance import functionality and UI in the Amazon Price Tracker application. Updated run.sh to manage background processes with logging, added Server-Sent Events for progress updates during ASIN imports, and improved frontend components to display import progress. Enhanced styles for better user experience and added internationalization support for new import messages.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -43,6 +43,10 @@
     "confirmDelete": "Are you sure you want to remove this product?",
     "importASINs": "Import ASINs",
     "importing": "Importing...",
+    "importStarting": "Starting import...",
+    "importProcessing": "Processing {{current}} of {{total}}",
+    "importCompleted": "Import completed!",
+    "importError": "Import failed",
     "importTotal": "Total",
     "importSuccess": "Success",
     "importSkipped": "Skipped",
