--- a/frontend/src/i18n/locales/pt-BR.json
+++ b/frontend/src/i18n/locales/pt-BR.json
@@ -43,6 +43,10 @@
     "confirmDelete": "Tem certeza de que deseja remover este produto?",
     "importASINs": "Importar ASINs",
     "importing": "Importando...",
+    "importStarting": "Iniciando importação...",
+    "importProcessing": "Processando {{current}} de {{total}}",
+    "importCompleted": "Importação concluída!",
+    "importError": "Falha na importação",
     "importTotal": "Total",
     "importSuccess": "Sucesso",
     "importSkipped": "Ignorados",
