Update package-lock files to include peer dependencies for TypeScript and Node types. Enhance Auth component to support password verification during registration, and update internationalization files to include new translation keys for password verification and mismatch messages.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -145,6 +145,8 @@
     "register": "Register",
     "username": "Username",
     "password": "Password",
+    "verifyPassword": "Verify Password",
+    "passwordMismatch": "Passwords do not match",
     "loading": "Loading...",
     "switchToRegister": "Don't have an account? Register",
     "switchToLogin": "Already have an account? Login"
